# GRAM

./: Readme.txt  readme.md
Code/Core/: GRAM.m  GRAM.m~  GRAM_DirectRegistrationForComparison.m  GRAM_FindK.m  GRAM_FineTuning.m  GRAM_FineTuning.m~  GRAM_GeodesicPath.m  GRAM_GeodesicRegistration.m  GRAM_GeodesicRegistration_temp.m  GRAM_Isomap.m  GRAM_Isomap.m~  GRAM_Montage.m  GRAM_Montage.m~  GRAM_PairwiseDistance.m  GRAM_ShowPath.m  Isomap_overlay.m  Isomap_overlay.m~  test_GRAM.m
Code/ITK/: CMakeLists.txt  ConcatenateFields.cxx  DemonsRegistration.cxx  DemonsRegistration_n.cxx  ImageGradient.cxx  JacobianField.cxx  TransportVelocityField.cxx  VelocityToDeformationField.cxx  WarpImage.cxx  invertDeformationField.cxx  itkDisplacementFieldJacobianFilter.h  itkDisplacementFieldJacobianFilter.txx
Demo/result/direct/: dHE.mat  dMSE.mat
Demo/result/direct/Field/: Syn51ToSyn01-def.mha  Syn51ToSyn02-def.mha  Syn51ToSyn03-def.mha  Syn51ToSyn04-def.mha  Syn51ToSyn05-def.mha  Syn51ToSyn06-def.mha  Syn51ToSyn07-def.mha  Syn51ToSyn08-def.mha  (+51 more)
Demo/result/geo/: gHE.mat  gMSE.mat  pHE.mat  pMSE.mat
Demo/subject/: Syn01.nii  Syn02.nii  Syn03.nii  Syn04.nii  Syn05.nii  Syn06.nii  Syn07.nii  Syn08.nii  Syn09.nii  Syn10.nii  Syn11.nii  Syn12.nii  Syn13.nii  Syn14.nii  Syn15.nii  Syn16.nii  Syn17.nii  Syn18.nii  Syn19.nii  Syn20.nii  Syn21.nii  Syn22.nii  Syn23.nii  Syn24.nii  Syn25.nii  Syn26.nii  Syn27.nii  Syn28.nii  Syn29.nii  Syn30.nii  Syn31.nii  Syn32.nii  Syn33.nii  Syn34.nii  Syn35.nii  Syn36.nii  Syn37.nii  Syn38.nii  Syn39.nii  Syn40.nii  (+20 more)
Doc/: GRAM_UserManual.docx
(+344 files in other folders)
